--- a/frontend/src/styles/Attendee.css
+++ b/frontend/src/styles/Attendee.css
@@ -320,7 +320,7 @@ font-size: 1.2rem;
 .loading, .no-events {
   text-align: center;
   margin-top: 3rem;
-  color: #bbb;
+  color: white;
 }
 
 .icon {
