--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -345,7 +345,7 @@
   .no-events {
     text-align: center;
     margin-top: 3rem;
-    color: #bbb;
+    color: white;
     font-size: 1rem;
   }
   
