--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -299,5 +299,14 @@ body,html {
 .Toastify__toast-container {
   z-index: 99999 !important;
 }
-
+.no-events{
+   text-align: center;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin:auto;
+  font-size: 1.2rem;
+  margin-top: 2rem;
+}
  
